Change some parameter names
They’re all pythonic now!
