# src/wheres_charlie/controllers/user_controllers.py
@@ -1,7 +1,7 @@
 from ..handlers import jwt_required
 
 
-def users_get(perPage, page, showHidden) -> str:
+def users_get(per_page, page, show_hidden) -> str:
     return 'do some magic!'
 
 
@@ -29,7 +29,7 @@ def users_id_patch(id, body) -> str:
     return 'do some magic!'
 
 
-def users_id_locations_get(id, perPage, page, reverseChronological, showHidden) -> str:
+def users_id_locations_get(id, per_page, page, reverse_chronological, show_hidden) -> str:
     return 'do some magic!'
 
 
